# AL_DZ

DZ/: Документация.txt  Инструкция по сборке.txt  Описание программы.txt
DZ/Client/: CMakeLists.txt  main.cpp
DZ/Server/: Factor.cpp  binom.cpp  calchistory.cpp  mainwindow.cpp
